# data_lens

./: .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml  research.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260309_0001_initial_schema.py
backend/src/: config.py  deps.py  main.py
backend/src/models/: __init__.py  analysis.py  file.py  message.py  subscription.py  user.py
backend/src/routers/: analysis.py  auth.py  billing.py  charts.py  chat.py  files.py
backend/src/schemas/: analysis.py  chat.py  file.py  subscription.py  user.py
backend/src/services/: chart_generator.py  data_profiler.py  domain_detector.py  file_detector.py  file_parser.py  insight_engine.py  llm_client.py  llm_prompts.py  s3_storage.py  usage_tracker.py
backend/src/workers/: process_file.py  run_analysis.py
design-concepts/: concept-1-noir-editorial.html  concept-10-vapor-gradient.html  concept-11-chat-first.html  concept-11-neo-brutalism.html  concept-11-y2k-liquid.html  concept-12-e-ink.html  concept-12-industrial-grid.html  concept-12-magic-sheet.html  concept-13-biomorphic.html  concept-13-exec-doc.html  concept-13-y2k-cyber.html  concept-14-glitch.html  concept-14-insight-feed.html  concept-14-organic-clay.html  concept-15-e-ink.html  concept-15-synthwave.html  concept-15-workbench.html  concept-2-soft-glass.html  concept-3-brutalist-data.html  concept-4-aurora-gradient.html  concept-5-warm-minimal.html  concept-6-cyberpunk-neon.html  concept-7-paper-craft.html  index.html  (+2 more)
(+55 files in other folders)
